schema/testdata/validation_permission_job/schema.keel
job MyJob {
    @permission(
        actions: [get],
        roles: [MyRole]
    )
}

role MyRole {
}
